# Generated by Django 5.2.13 on 2026-04-09 00:10

import django.core.validators
import django.db.models.deletion
from decimal import Decimal
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('activities', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Timesheet',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('period_start', models.DateField()),
                ('period_end', models.DateField()),
                ('status', models.CharField(choices=[('in_progress', 'In Progress'), ('submitted', 'Submitted'), ('approved', 'Approved'), ('rejected', 'Rejected')], default='in_progress', max_length=24)),
                ('submission_due_at', models.DateTimeField()),
                ('approval_due_at', models.DateTimeField()),
                ('submitted_at', models.DateTimeField(blank=True, null=True)),
                ('approved_at', models.DateTimeField(blank=True, null=True)),
                ('rejected_at', models.DateTimeField(blank=True, null=True)),
                ('latest_rejection_note', models.TextField(blank=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('approver', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='assigned_timesheets', to=settings.AUTH_USER_MODEL)),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='timesheets', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'ordering': ['-period_start', '-updated_at'],
            },
        ),
        migrations.CreateModel(
            name='TimeEntry',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('work_date', models.DateField()),
                ('duration', models.DecimalField(decimal_places=2, max_digits=5, validators=[django.core.validators.MinValueValidator(Decimal('0.25'))])),
                ('billing_type', models.CharField(choices=[('internal', 'Internal'), ('billable', 'Billable'), ('non_billable', 'Non-Billable')], default='internal', max_length=16)),
                ('entry_category', models.CharField(choices=[('project_work', 'Project Work'), ('leave', 'Leave'), ('non_project', 'Non-Project')], default='project_work', max_length=16)),
                ('system_controlled_hours', models.BooleanField(default=False)),
                ('notes', models.TextField(blank=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('activity_code', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='time_entries', to='activities.activitycode')),
                ('timesheet', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='entries', to='timesheets.timesheet')),
            ],
            options={
                'ordering': ['work_date', 'activity_code__code', 'id'],
            },
        ),
        migrations.AddConstraint(
            model_name='timesheet',
            constraint=models.UniqueConstraint(fields=('user', 'period_start'), name='unique_timesheet_per_user_period'),
        ),
        migrations.AddConstraint(
            model_name='timeentry',
            constraint=models.UniqueConstraint(fields=('timesheet', 'activity_code', 'work_date'), name='unique_entry_per_day_activity'),
        ),
    ]
